--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "next": "^12.0.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.2.6"
   }
 }
