--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,6 @@
 package = "@netlify/plugin-nextjs"
 [build]
 publish = ".next"
+[functions]
+  node_bundler = "esbuild"
+  external_node_modules = [ "@ampproject/toolbox-optimizer", "sharp"]
